--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<title>Darmanito MJ.N</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 	<section class="all">
@@ -62,28 +63,24 @@
 			</div>
 		</div>
 
-		<div class="fourth">
+		<div>
 			<header class="fourth__Header"><h3>امکانات درمانیتو</h3></header>
 			<div class="fourth__Content"> 
-				<table class="fourth__table">
-					<tr>
-						<td><figure class="fourth__figure"><i class="fa fa-tty" ></i><figcaption class="fourth__figcaption" >داروخانه</figcaption></figure></td>
-						<td><figure class="fourth__figure"><i class="fa fa-medkit" ></i><figcaption  class="fourth__figcaption">فروشگاه</figcaption></figure></td>
-					</tr>
-					<tr>
-						<td><figure class="fourth__figure"><i class="fa fa-stethoscope" ></i><figcaption class="fourth__figcaption">ویزیت آنلاین</figcaption></figure></td>
-						<td><figure class="fourth__figure"><i class="fa fa-child" ></i><figcaption class="fourth__figcaption">نوبت آنلاین</figcaption></figure></td>
-					</tr>
-				</table>
+				<div class="fourth__options">
+					<img src="./assets/Group 5143.png">
+					<img src="./assets/Group 5148.png">
+					<img src="./assets/Group 5149.png">
+					<img src="./assets/Group 5147.png">
+				</div>
 				<div class="fourth__left">
 					<header><h4>داروخانه آنلاین</h4></header>
 					<div><p>در سرویس داروخانه شما میتوانید نسخه دارویی یا محصول بهداشتی خودتون رو برای پیدا شدن به داروخانه و فروشگاه ها سفارش بدید. </p></div>
 					<div>
-						<p><img src="./assets/Group 5152.png" alt="header small mark">قدم اول</p>
+						<p><img src="./assets/Group 5152.png" alt="header small mark" class="fourth__lefttxt">قدم اول</p>
 						<p style="text-indent: 4vw;">وارد بخش سفارش با عکس نسخه شوید و عکس و توضیحات را وارد کنید.</p>
-						<p><img src="./assets/Group 5152.png" alt="header small mark">قدم دوم</p>
+						<p><img src="./assets/Group 5152.png" alt="header small mark" class="fourth__lefttxt">قدم دوم</p>
 						<p style="text-indent: 4vw;">بعد از ارسال عکس نسخه، باید آدرس محل خودتون رو وارد کنید.</p>
-						<p><img src="./assets/Ellipse 3.png" alt="header small mark">قدم سوم</p>
+						<p><img src="./assets/Ellipse 3.png" alt="header small mark" class="fourth__lefttxt">قدم سوم</p>
 						<p style="text-indent: 4vw;">اگر نتیجه جستجوی نسخه موفقیت آمیز باشه باید منتظر تحویل سفارش باشید.</p>
 					</div>
 				</div>
