problem with rtl and Bootstrap

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<i class="fa fa-bars icon-default"></i>
 				</a>
 				<a href="#home">صفحه اصلی</a>
-				<a href="#about">درباره ما</a>
+				<a href="./pages/about.html">درباره ما</a>
 				<a href="#contact">تماس با ما</a>
 				<a href="#join">عضویت داروخانه ها</a>
 			</div>
