about page first version eskeleton

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,56 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="fa">
 <head>
   <title>About Darmanito</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 text-right">
+            <div class="col-sm-2 text-right">
                 <img src="../assets/Group 152.svg" alt="header small mark" >
             </div>
-            <div class="col-sm-4 text-nowrap">
-                <ul class="list-inline">
-                    <li><a href="../index.html">صفحه اصلی</a></li>
-                    <li><a href="#">درباره ما</a></li>
-                    <li><a href="#">تماس با ما</a></li>
-                    <li><a href="#">عضویت داروخانه ها</a></li>
+            <div class="col-sm-8 d-none d-sm-block text-center">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">عضویت داروخانه ها</a></li>
                 </ul>
             </div>
-            <div class="col-sm-4 text-left" >
+            <div class="col-sm-8 d-block d-sm-none">
+                <nav class="navbar navbar-expand-sm">
+                    <!-- Toggler/collapsibe Button -->
+                    <button class="navbar-toggler text-right btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <!-- Navbar links -->
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+            </div>
+            <div class="col-sm-2 d-none d-sm-block" >
                 <button>دانلود درمانیتو</button>
+            </div>
+            <div class="col-sm-2">
+
             </div>
         </div>
         
-        <div class="row">
-            <br>
-            <div class="col-sm-6 text-center" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6 text-center" style="background-color:lavenderblush;">.col-sm-6</div>
+        <div class="row mt-2">
+            <div class="col-sm-6" style="background-color:lavender;">.col-sm-asdasd</div>
+            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
-        <div class="row">
-            <br>
+        <div class="row mt-2">
+            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6yyt</div>
+            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+        </div>
+        <div class="row mt-2">
             <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
-        <div class="row">
-            <br>
+        <div class="row mt-2">
             <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
-        <div class="row">
-            <br>
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
-        </div>
-        <div class="row">
-            <br>
+        <div class="row mt-2">
             <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
