Skeleon is ready

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
   <title>About Darmanito</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -14,8 +14,8 @@
 <body>
 
     <div class="container-fluid">
-        <div class="row mr-5 ml-5">
-            <div class="col-sm-2 text-right navbar-custom">
+        <div class="row mr-5 ml-5 mt-2">
+            <div class="col-sm-2 text-right ">
                 <img src="../assets/Group 152.svg" alt="header small mark" >
             </div>
             <div class="col-sm-8 d-none d-sm-flex justify-content-center text-nowrap">
@@ -46,14 +46,14 @@
                           <a class="nav-link" href="#">Link</a>
                         </li>
                         <li>
-                            <button>دانلود درمانیتو</button>
+                            <button type="button" class="btn  btn-primary" >دانلود درمانیتو</button>
                         </li>
                       </ul>
                     </div>
                   </nav>
             </div>
-            <div class="col-sm-2 d-none d-sm-flex justify-content-center" >
-                <button>دانلود درمانیتو</button>
+            <div class="col-sm-2 d-none d-sm-block" >
+                <button type="button" class="btn  btn-primary mt-2" >دانلود درمانیتو</button>
             </div>
             
         </div>
@@ -75,8 +75,35 @@
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
         <div class="row mt-2 mt-2 mr-5 ml-5">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+            <div class="col-sm-3 text-right" style="background-color:lavender;">
+              <img src="../assets/Group 152.svg" alt="header small mark" class="m-3">
+              <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
+              <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
+              <h3>
+                <i href="#" class="fa fa-linkedin"></i>
+                <i href="#" class="fa fa-twitter"></i>
+                <i href="#" class="fa fa-instagram"></i>
+              </h3>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lavenderblush;">
+              <h4 class="mt-3">خدمات درمانیتو</h4>
+              <h5><small>داروخانه آنلاین</small></h5>
+              <h5><small>فروشگاه آنلاین</small></h5>
+              <h5><small>ویزیت آنلاین</small></h5>
+              <h5><small>پرونده پزشکی</small></h5>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightcyan;">
+              <h4 class="mt-3">صفحات درمانیتو</h4>
+              <h5><small>تماس باما</small></h5>
+              <h5><small>درباره ما</small></h5>
+              <h5><small>سوالات متداول</small></h5>
+              <h5><small>قوانین و شرایط</small></h5>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
+              <h4 class="mt-3">دانلود درمانیتو</h4>
+              <a href="#" ><img class="footer__storeimages" src="../assets/bazzar black icon.png"></a>
+				      <a href="#" ><img class="footer__storeimages" src="../assets/sibapp black icon.png"></a>
+            </div>
         </div>
     </div>
 
