Skeleton final version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<section class="all">
-		<header class="nav" id="headerTopnav">
+		<header class="mynav" id="headerTopnav">
 			<div>
 				<img src="./assets/Group 152.svg" alt="header small mark" class="nav__image">
 			</div>
