--- a/pages/about.html
+++ b/pages/about.html
@@ -20,33 +20,42 @@
             </div>
             <div class="col-sm-8 d-none d-sm-flex justify-content-center text-nowrap">
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">صفحه اصلی</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">تماس با ما</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">عضویت داروخانه ها</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="../index.html">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">درباره ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">عضویت داروخانه ها</a></li>
                 </ul>
             </div>
             <div class="col-sm-8 d-block d-sm-none">
                 <nav class="navbar navbar-expand-sm">
                     <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler text-right btn-sm btn-primary" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                      <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler text-right btn-sm " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <i class="fa fa-bars" style="color:black;"></i>
                     </button>
                   
                     <!-- Navbar links -->
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                       <ul class="navbar-nav text-right">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link custom-nav-small" href="../index.html">صفحه اصلی</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link custom-nav-small" href="#">عضویت در داروخانه ها</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link custom-nav-small" href="#">درباره ما</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">تماس باما</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">سوالات متداول</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">قوانین و شرایط</a>
                         </li>
                         <li>
-                            <button type="button" class="btn  btn-primary" >دانلود درمانیتو</button>
+                            <button type="button" class="btn  btn-primary" >دانلود مستقیم درمانیتو</button>
                         </li>
                       </ul>
                     </div>
@@ -59,11 +68,11 @@
         </div>
         
         <div class="row mt-2 mr-5 ml-5">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-asdasd</div>
+            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
         <div class="row mt-2">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6yyt</div>
+            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
             <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
         </div>
         <div class="row mt-2 mr-5 ml-5">
@@ -76,7 +85,7 @@
         </div>
         <div class="row mt-2 mt-2 mr-5 ml-5">
             <div class="col-sm-3 text-right" style="background-color:lavender;">
-              <img src="../assets/Group 152.svg" alt="header small mark" class="m-3">
+              <img src="../assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
               <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
               <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
               <h3>
@@ -86,21 +95,21 @@
               </h3>
             </div>
             <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lavenderblush;">
-              <h4 class="mt-3">خدمات درمانیتو</h4>
-              <h5><small>داروخانه آنلاین</small></h5>
-              <h5><small>فروشگاه آنلاین</small></h5>
-              <h5><small>ویزیت آنلاین</small></h5>
-              <h5><small>پرونده پزشکی</small></h5>
+              <h5 class="mt-3">خدمات درمانیتو</h5>
+              <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
             </div>
             <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightcyan;">
-              <h4 class="mt-3">صفحات درمانیتو</h4>
-              <h5><small>تماس باما</small></h5>
-              <h5><small>درباره ما</small></h5>
-              <h5><small>سوالات متداول</small></h5>
-              <h5><small>قوانین و شرایط</small></h5>
+              <h5 class="mt-3">صفحات درمانیتو</h5>
+              <h6 class="custom-footer-links"><small><a href="#"  >تماس باما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
             </div>
             <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
-              <h4 class="mt-3">دانلود درمانیتو</h4>
+              <h5 class="mt-3">دانلود درمانیتو</h5>
               <a href="#" ><img class="footer__storeimages" src="../assets/bazzar black icon.png"></a>
 				      <a href="#" ><img class="footer__storeimages" src="../assets/sibapp black icon.png"></a>
             </div>
