--- a/index.html
+++ b/index.html
@@ -7,27 +7,65 @@
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<title>Darmanito MJ.N</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<section class="all">
-		<header class="mynav" id="headerTopnav">
-			<div>
-				<img src="./assets/Group 152.svg" alt="header small mark" class="nav__image">
+	<div class="container-fluid">
+        <div class="row mr-5 ml-5 mt-2">
+            <div class="col-sm-2 text-right ">
+                <img src="./assets/Group 152.svg" alt="header small mark" >
+            </div>
+            <div class="col-sm-8 d-none d-sm-flex justify-content-center text-nowrap">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="./pages/about.html">درباره ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="./pages/contact.html">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">عضویت داروخانه ها</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-8 d-block d-sm-none">
+                <nav class="navbar navbar-expand-sm">
+                    <!-- Toggler/collapsibe Button -->
+                    <button class="navbar-toggler text-right btn-sm " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <i class="fa fa-bars" style="color:black;"></i>
+                    </button>
+                  
+                    <!-- Navbar links -->
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                      <ul class="navbar-nav text-right">
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">صفحه اصلی</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">عضویت در داروخانه ها</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="./pages/about.html">درباره ما</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="./pages/contact.html">تماس باما</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="./pages/faq.html">سوالات متداول</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link custom-nav-small" href="#">قوانین و شرایط</a>
+                        </li>
+                        <li>
+                            <button type="button" class="btn  btn-primary" >دانلود مستقیم درمانیتو</button>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
 			</div>
-			<div>
-				<a href="javascript:void(0);" class="nav__icon" onclick="respMenuFunc()">
-					<i class="fa fa-bars icon-default"></i>
-				</a>
-				<a href="#home">صفحه اصلی</a>
-				<a href="./pages/about.html">درباره ما</a>
-				<a href="#contact">تماس با ما</a>
-				<a href="#join">عضویت داروخانه ها</a>
-			</div>
-			<div>
-				<button class="nav__button">دانلود درمانیتو</button>
-			</div>
-		</header>
+			<div class="col-sm-2 d-none d-sm-block" >
+                <button type="button" class="btn  btn-primary mt-2" >دانلود درمانیتو</button>
+            </div>
+            
+        </div>
 
 		<div class="second">
 			<div class="second__right">
@@ -133,44 +171,38 @@
 			</div>
 		</div>
 
-		<footer class="footer">
-			<div>
-				<div>
-					<div>
-						<img src="./assets/Group 152.svg" alt="header small mark">
-					</div>
-					<div>
-						<h3>سوپر اپلیکیشن حوزه درمان و سلامت</h3>
-						<h6>تمامی حقوق ماده و معنوی این سایت متعلق به درمانیتو است.</h6>
-						<div>
-							<i href="#" class="fa fa-linkedin"></i>
-							<i href="#" class="fa fa-twitter"></i>
-							<i href="#" class="fa fa-instagram"></i>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div>
-				<h5>خدمات درمانیتو</h5>
-				<p>داروخانه آنلاین</p>
-				<p>فروشگاه آنلاین</p>
-				<p>ویزیت آنلاین</p>
-				<p>پرونده پزشکی</p>
-			</div>
-			<div>
-				<h5>صفحات درمانیتو</h5>
-				<p>تماس با ما</p>
-				<p>درباره ما</p>
-				<p>سوالات متداول</p>
-				<p>قوانین و شرایط</p>
-			</div>
-			<div>
-				<h4>دانلود درمانیتو</h4>
-				<a href="#" ><img class="footer__storeimages" src="./assets/bazzar black icon.png"></a>
-				<a href="#" ><img class="footer__storeimages" src="./assets/sibapp black icon.png"></a>
-			</div>
-		</footer>
-	</section>
+		<div class="row mt-2 mt-2 mr-5 ml-5">
+            <div class="col-sm-3 text-right" style="background-color:lavender;">
+              <img src="./assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
+              <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
+              <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
+              <h3>
+                <i href="#" class="fa fa-linkedin"></i>
+                <i href="#" class="fa fa-twitter"></i>
+                <i href="#" class="fa fa-instagram"></i>
+              </h3>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lavenderblush;">
+              <h5 class="mt-3">خدمات درمانیتو</h5>
+              <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightcyan;">
+              <h5 class="mt-3">صفحات درمانیتو</h5>
+              <h6 class="custom-footer-links"><small><a href="#"  >تماس باما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
+            </div>
+            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
+              <h5 class="mt-3">دانلود درمانیتو</h5>
+              <a href="#" ><img class="footer__storeimages m-1" src="./assets/bazzar black icon.png"></a>
+				      <a href="#" ><img class="footer__storeimages m-1" src="./assets/sibapp black icon.png"></a>
+            </div>
+        </div>
+	</div>
 
 
 <script type="text/javascript" src="script.js">
