--- a/pages/about.html
+++ b/pages/about.html
@@ -21,8 +21,8 @@
             <div class="col-sm-8 d-none d-sm-flex justify-content-center text-nowrap">
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link custom-nav-large" href="../index.html">صفحه اصلی</a></li>
-                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">درباره ما</a></li>
-                    <li class="nav-item"><a class="nav-link custom-nav-large" href="#">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="../pages/about.html">درباره ما</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav-large" href="../pages/contact.html">تماس با ما</a></li>
                     <li class="nav-item"><a class="nav-link custom-nav-large" href="#">عضویت داروخانه ها</a></li>
                 </ul>
             </div>
@@ -46,10 +46,10 @@
                           <a class="nav-link custom-nav-small" href="#">درباره ما</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link custom-nav-small" href="#">تماس باما</a>
+                          <a class="nav-link custom-nav-small" href="./pages/contact.html">تماس باما</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link custom-nav-small" href="#">سوالات متداول</a>
+                          <a class="nav-link custom-nav-small" href="./pages/faq.html">سوالات متداول</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link custom-nav-small" href="#">قوانین و شرایط</a>
@@ -110,8 +110,8 @@
             </div>
             <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
               <h5 class="mt-3">دانلود درمانیتو</h5>
-              <a href="#" ><img class="footer__storeimages" src="../assets/bazzar black icon.png"></a>
-				      <a href="#" ><img class="footer__storeimages" src="../assets/sibapp black icon.png"></a>
+              <a href="#" ><img class="footer__storeimages m-1" src="../assets/bazzar black icon.png"></a>
+				      <a href="#" ><img class="footer__storeimages m-1" src="../assets/sibapp black icon.png"></a>
             </div>
         </div>
     </div>
