--- a/index.html
+++ b/index.html
@@ -67,28 +67,26 @@
             
         </div>
 
-		<div class="second">
-			<div class="second__right">
-				<div>
-					<h2 class="second__title">اپلیکیشن درمانیتو</h2>
-					<p>درمانیتو سامانه هوشمنددرمان و سلامت</p>
-				</div>
-				<div>
-					<button class="second__button">دانلود درمانیتو</button>
-					<button class="second__button">عضویت داروخانه ها</button>
-				</div>
+		<div class="row mt-4 mr-5 ml-5">
+			<div class="col-sm-6 text-right second__right">
+				<h2 class="second__title">اپلیکیشن درمانیتو</h2>
+				<p>درمانیتو سامانه هوشمنددرمان و سلامت</p>
+				<button class="second__button">دانلود درمانیتو</button>
+				<button class="second__button">عضویت داروخانه ها</button>
 			</div>
-			<div>
+			<div class="col-sm-6" >
 				<img src="./assets/doctor_two_color.svg" class="second__image">
 			</div>
 		</div>
-		
-		<div class="third">
-			<a href=#>
+
+		<div class="row mt-4 mr-5 ml-5">
+			<div class="col-sm-6" >
+				<a href=#>
 				<img src="./assets/third-row image play and dr together.png" class="third__image">
-			</a>
-			<div>
-				<div>
+				</a>
+			</div>
+			<div class="col-sm-6 text-right third__left" >
+				<div class="text-right">
 					<h3 class="third__title" >درباره درمانیتو</h3>
 					<p>درمانیتو یک سامانه است که امکان سفارش دارو، محصولات آرایشی بهداشتی نوبت گیری و مشاوره پزشکان را به راحتی و بصورت آنلاین فراهم کرده است.</p>
 				</div>
@@ -99,18 +97,20 @@
 					<figure class="third__figure"><img src="./assets/icons/search.svg" class="third__lowerimage"></i><figcaption class="third__figcaption">دقیق</figcaption></figure>
 				</div>
 			</div>
-		</div>
+        </div>
+		
 
-		<div>
-			<header class="fourth__Header"><h3>امکانات درمانیتو</h3></header>
-			<div class="fourth__Content"> 
-				<div class="fourth__options">
-					<img src="./assets/Group 5143.png">
-					<img src="./assets/Group 5148.png">
-					<img src="./assets/Group 5149.png">
-					<img src="./assets/Group 5147.png">
+		<div class="row mt-5 mr-5 ml-5">
+			<header class="fourth__Header text-right"><h3>امکانات درمانیتو</h3></header>
+		</div>
+		<div class="row mr-5 ml-5">
+				<div class="col-sm-6 text-right" >
+					<img src="./assets/Group 5143.png" class="fourth__img">
+					<img src="./assets/Group 5148.png" class="fourth__img">
+					<img src="./assets/Group 5149.png" class="fourth__img">
+					<img src="./assets/Group 5147.png" class="fourth__img">
 				</div>
-				<div class="fourth__left">
+				<div class="col-sm-6 text-right" >
 					<header><h4>داروخانه آنلاین</h4></header>
 					<div><p>در سرویس داروخانه شما میتوانید نسخه دارویی یا محصول بهداشتی خودتون رو برای پیدا شدن به داروخانه و فروشگاه ها سفارش بدید. </p></div>
 					<div>
@@ -122,13 +122,12 @@
 						<p style="text-indent: 4vw;">اگر نتیجه جستجوی نسخه موفقیت آمیز باشه باید منتظر تحویل سفارش باشید.</p>
 					</div>
 				</div>
-			</div>
 		</div>
 
 
-		<div class="fifth">
-			<div class="fifth__text">
-				<h1>دانلود اپلیکیشن درمانیتو</h1>
+		<div class="row fifth  mt-4">
+			<div class="col-sm-6 fifth__right text-right">
+				<h2>دانلود اپلیکیشن درمانیتو</h2>
 				<p>برای دریافت لینک دانلود، شماره موبایل خود را وارد کنید.</p>
 				<form>
 					<input placeholder="09xx xxx xx xx شماره موبایل خود را وارد کنید">
@@ -140,15 +139,15 @@
 					<img src="./assets/sibapp blue button.png">
 				</div>
 			</div>
-			<div>
+			<div class="col-sm-6 text-center">
 				<img src="./assets/Mask Group 32.png"  class="fifth__leftimage" >
 			</div>
 		</div>
 
 
-		<div class="sixth">
-			<div>
-				<h1>عضویت داروخانه یا مراکز درمانی</h1>
+		<div class="row sixth mt-4 mr-5 ml-5">
+			<div class="col-sm-6 text-right sixth__right" >
+				<h2>عضویت داروخانه یا مراکز درمانی</h2>
 				<p>اگر به عنوان داروخانه یا مرکز درمانی قصد دارید در روند درمان و کسب کار خودتان تغییری ایجاد کنید درمانیتو منتظر شماست</p>
 				<form>
 					<input placeholder="09xx xxx xx xx شماره موبایل خود را وارد کنید">
@@ -156,23 +155,23 @@
 				</form>
 			</div>
 			
-			<div>
+			<div class="col-sm-6" >
 				<img src="./assets/health__two_color (1).png">
 			</div>
 		</div>
 
-		<div class="seventh">
-			<div>
+		<div class="row seventh mt-4">
+			<div class="col-sm-6 text-right">
 				<h2>پشتیبانی در مانیتو</h2>
 				<p>پاسخگویی در روزهای کاری از 9 صبح تا 9 شب</p>
 			</div>
-			<div>
+			<div class="col-sm-6 d-flex align-items-center justify-content-center">
 				<img src="./assets/Group 5520.png" >
 			</div>
 		</div>
 
-		<div class="row mt-2 mt-2 mr-5 ml-5">
-            <div class="col-sm-3 text-right" style="background-color:lavender;">
+		<div class="row mt-4 mt-2 mr-5 ml-5">
+            <div class="col-sm-3 text-right" >
               <img src="./assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
               <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
               <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
@@ -182,21 +181,21 @@
                 <i href="#" class="fa fa-instagram"></i>
               </h3>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lavenderblush;">
+            <div class="col-sm-3 d-none d-sm-block text-right" >
               <h5 class="mt-3">خدمات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightcyan;">
+            <div class="col-sm-3 d-none d-sm-block text-right" >
               <h5 class="mt-3">صفحات درمانیتو</h5>
-              <h6 class="custom-footer-links"><small><a href="#"  >تماس باما</a></small></h6>
-              <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
-              <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="./pages/contact.html">تماس باما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="./pages/about.html">درباره ما</a></small></h6>
+              <h6 class="custom-footer-links"><small><a href="./pages/faq.html">سوالات متداول</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
+            <div class="col-sm-3 d-none d-sm-block text-right" >
               <h5 class="mt-3">دانلود درمانیتو</h5>
               <a href="#" ><img class="footer__storeimages m-1" src="./assets/bazzar black icon.png"></a>
 				      <a href="#" ><img class="footer__storeimages m-1" src="./assets/sibapp black icon.png"></a>
