--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid index">
         <div class="row mr-5 ml-5 mt-2">
             <div class="col-sm-2 text-right ">
                 <img src="./assets/Group 152.svg" alt="header small mark" >
@@ -198,7 +198,7 @@
             <div class="col-sm-3 d-none d-sm-block text-right" >
               <h5 class="mt-3">دانلود درمانیتو</h5>
               <a href="#" ><img class="footer__storeimages m-1" src="./assets/bazzar black icon.png"></a>
-				      <a href="#" ><img class="footer__storeimages m-1" src="./assets/sibapp black icon.png"></a>
+			  <a href="#" ><img class="footer__storeimages m-1" src="./assets/sibapp black icon.png"></a>
             </div>
         </div>
 	</div>
