--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid about">
         <div class="row mr-5 ml-5 mt-2">
             <div class="col-sm-2 text-right ">
                 <img src="../assets/Group 152.svg" alt="header small mark" >
@@ -64,27 +64,84 @@
             <div class="col-sm-2 d-none d-sm-block" >
                 <button type="button" class="btn  btn-primary mt-2" >دانلود درمانیتو</button>
             </div>
-            
         </div>
         
-        <div class="row mt-2 mr-5 ml-5">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+        <div class="row mt-4 mr-5 ml-5">
+            <div class="col-sm-6 second__right text-right">
+              <h2>اپلیکیشن درمانیتو</h2>
+              <p>درمانیتو سامانه هوشمنددرمان و سلامت</p>
+              <form>
+                <input placeholder="09xx xxx xx xx شماره موبایل خود را وارد کنید">
+                <button type="submit">ثبت نام سریع</button>
+              </form>
+            </div>
+            <div class="col-sm-6" >
+              <img src="../assets/Group 5280.png" class="second__image">
+            </div>
         </div>
-        <div class="row mt-2">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+
+        <div class="row mt-4 third">
+            <div class="col-sm-4 text-center mt-3">
+              <h6>تعداد کاربران درمانیتو</h6>
+              <h4>120,000+</h4>
+            </div>
+            <div class="col-sm-4 text-center mt-3">
+              <h6>تعداد داروخانه و مراکز</h6>
+              <h4>120,000+</h4>
+            </div>
+            <div class="col-sm-4 text-center mt-3">
+              <h6>تعداد داروخانه و مراکز</h6>
+              <h4>120,000+</h4>
+            </div>
         </div>
-        <div class="row mt-2 mr-5 ml-5">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+
+        <div class="row mt-4 mr-5 ml-5 fourth">
+          <div class="col-sm-6 text-right" >
+            <h3>درمانیتو چه خدماتی ارایه میدهد</h3>
+            <p>خدمت مورد نظر خود را برای ثبت نام انتخاب کنید</p>
+          </div>
         </div>
-        <div class="row mt-2">
-            <div class="col-sm-6" style="background-color:lavender;">.col-sm-6</div>
-            <div class="col-sm-6" style="background-color:lavenderblush;">.col-sm-6</div>
+
+        <div class="row mr-5 ml-5 fifth">
+            <div class="col-sm-6 text-right p-5">
+              <div>
+                <div class="card-body text-center ">
+                  <img src="../assets/health__two_color (4).png" class="img1">
+                </div>
+              </div>
+              <h2>داروخانه</h2>
+              <p>مایل هستم فقط بعنوان داروخانه فعالیت کنم و در بخش صرفا سفارش دارو با عکس نسخه به بیماران کمک رسانی کنم </p>
+              <div class="text-center">
+                <button type="button" class="btn btn-primary mt-2" >ثبت نام</button>
+              </div>
+            </div>
+            <div class="col-sm-6 text-right p-5">
+              <div>
+                <div class="card-body text-center">
+                  <img src="../assets/Group 5536.png" class="img2">
+                </div>
+              </div>
+              <h2>فروشگاه آرایشی بهداشتی</h2>
+              <p>مایل هستم فقط بعنوان داروخانه فعالیت کنم و در بخش صرفا سفارش دارو با عکس نسخه به بیماران کمک رسانی کنم </p>
+              <div class="text-center">
+                <button type="button" class="btn btn-primary mt-2" >ثبت نام</button>
+              </div>
+            </div>
         </div>
-        <div class="row mt-2 mt-2 mr-5 ml-5">
-            <div class="col-sm-3 text-right" style="background-color:lavender;">
+
+        <div class="row mt-4 sixth">
+          <div class="col-sm-6 text-right">
+            <h2>پشتیبانی در مانیتو</h2>
+            <p>پاسخگویی در روزهای کاری از 9 صبح تا 9 شب</p>
+          </div>
+          <div class="col-sm-6 d-flex align-items-center justify-content-center">
+            <img src="../assets/Group 5520.png" >
+          </div>
+        </div>
+
+
+        <div class="row m4-2 mt-2 mr-5 ml-5">
+            <div class="col-sm-3 text-right">
               <img src="../assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
               <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
               <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
@@ -94,24 +151,24 @@
                 <i href="#" class="fa fa-instagram"></i>
               </h3>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lavenderblush;">
+            <div class="col-sm-3 d-none d-sm-block text-right">
               <h5 class="mt-3">خدمات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightcyan;">
+            <div class="col-sm-3 d-none d-sm-block text-right">
               <h5 class="mt-3">صفحات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="#"  >تماس باما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" style="background-color:lightyellow;">
-              <h5 class="mt-3">دانلود درمانیتو</h5>
-              <a href="#" ><img class="footer__storeimages m-1" src="../assets/bazzar black icon.png"></a>
-				      <a href="#" ><img class="footer__storeimages m-1" src="../assets/sibapp black icon.png"></a>
+            <div class="col-sm-3 d-none d-sm-block text-right" >
+                <h5 class="mt-3">دانلود درمانیتو</h5>
+                <a href="#" ><img class="footer__storeimages m-1" src="../assets/bazzar black icon.png"></a>
+			          <a href="#" ><img class="footer__storeimages m-1" src="../assets/sibapp black icon.png"></a>
             </div>
         </div>
     </div>
