about page version 2

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 			</div>
         </div>
 		
-
 		<div class="row mt-5 mr-5 ml-5">
 			<header class="fourth__Header text-right"><h3>امکانات درمانیتو</h3></header>
 		</div>
@@ -124,7 +123,6 @@
 				</div>
 		</div>
 
-
 		<div class="row fifth  mt-4">
 			<div class="col-sm-6 fifth__right text-right">
 				<h2>دانلود اپلیکیشن درمانیتو</h2>
@@ -144,8 +142,7 @@
 			</div>
 		</div>
 
-
-		<div class="row sixth mt-4 mr-5 ml-5">
+		<div class="row sixth m-5 p-5">
 			<div class="col-sm-6 text-right sixth__right" >
 				<h2>عضویت داروخانه یا مراکز درمانی</h2>
 				<p>اگر به عنوان داروخانه یا مرکز درمانی قصد دارید در روند درمان و کسب کار خودتان تغییری ایجاد کنید درمانیتو منتظر شماست</p>
@@ -154,49 +151,48 @@
 					<button type="submit">ثبت نام سریع</button>
 				</form>
 			</div>
-			
 			<div class="col-sm-6" >
 				<img src="./assets/health__two_color (1).png">
 			</div>
 		</div>
 
-		<div class="row seventh mt-4">
-			<div class="col-sm-6 text-right">
+		<div class="row seventh mt-5">
+			<div class="col-sm-6 text-center p-4">
 				<h2>پشتیبانی در مانیتو</h2>
 				<p>پاسخگویی در روزهای کاری از 9 صبح تا 9 شب</p>
 			</div>
-			<div class="col-sm-6 d-flex align-items-center justify-content-center">
+			<div class="col-sm-6 d-flex align-items-center justify-content-center p-4">
 				<img src="./assets/Group 5520.png" >
 			</div>
 		</div>
 
-		<div class="row mt-4 mt-2 mr-5 ml-5">
-            <div class="col-sm-3 text-right" >
-              <img src="./assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
-              <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
-              <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
-              <h3>
+		<div class="row mt-3 mr-5 ml-5">
+            <div class="col-sm-4 text-right pl-0 pr-0" >
+              <img src="./assets/Group 152.svg" alt="header small mark" class="m-1 text-center">
+              <h5 class="m-2">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
+              <p class="m-2"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
+              <h3 class="text-center d-flex justify-content-around ml-5 mr-5">
                 <i href="#" class="fa fa-linkedin"></i>
                 <i href="#" class="fa fa-twitter"></i>
                 <i href="#" class="fa fa-instagram"></i>
               </h3>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" >
-              <h5 class="mt-3">خدمات درمانیتو</h5>
+            <div class="col-sm-2 d-none d-sm-block text-right" >
+              <h5 class="mt-1">خدمات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" >
-              <h5 class="mt-3">صفحات درمانیتو</h5>
+            <div class="col-sm-2 d-none d-sm-block text-right" >
+              <h5 class="mt-1">صفحات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="./pages/contact.html">تماس باما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="./pages/about.html">درباره ما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="./pages/faq.html">سوالات متداول</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" >
-              <h5 class="mt-3">دانلود درمانیتو</h5>
+            <div class="col-sm-4 d-none d-sm-block text-right" >
+              <h5 class="mt-1">دانلود درمانیتو</h5>
               <a href="#" ><img class="footer__storeimages m-1" src="./assets/bazzar black icon.png"></a>
 			  <a href="#" ><img class="footer__storeimages m-1" src="./assets/sibapp black icon.png"></a>
             </div>
