--- a/pages/about.html
+++ b/pages/about.html
@@ -103,25 +103,30 @@
         </div>
 
         <div class="row mr-5 ml-5 fifth">
-            <div class="col-sm-6 text-right p-5">
+            <div class="col-sm-5 text-right p-2 fifth__right ">
               <div>
                 <div class="card-body text-center ">
                   <img src="../assets/health__two_color (4).png" class="img1">
                 </div>
               </div>
-              <h2>داروخانه</h2>
+              <h3>داروخانه</h3>
               <p>مایل هستم فقط بعنوان داروخانه فعالیت کنم و در بخش صرفا سفارش دارو با عکس نسخه به بیماران کمک رسانی کنم </p>
               <div class="text-center">
                 <button type="button" class="btn btn-primary mt-2" >ثبت نام</button>
               </div>
             </div>
-            <div class="col-sm-6 text-right p-5">
+            </br>
+            <div class="col-sm-2 md-3">
+              <div></div>
+            </div>
+            </br>
+            <div class="col-sm-5 text-right p-2 fifth__left md-3">
               <div>
                 <div class="card-body text-center">
                   <img src="../assets/Group 5536.png" class="img2">
                 </div>
               </div>
-              <h2>فروشگاه آرایشی بهداشتی</h2>
+              <h3>فروشگاه آرایشی بهداشتی</h3>
               <p>مایل هستم فقط بعنوان داروخانه فعالیت کنم و در بخش صرفا سفارش دارو با عکس نسخه به بیماران کمک رسانی کنم </p>
               <div class="text-center">
                 <button type="button" class="btn btn-primary mt-2" >ثبت نام</button>
@@ -129,46 +134,46 @@
             </div>
         </div>
 
-        <div class="row mt-4 sixth">
-          <div class="col-sm-6 text-right">
+        <div class="row mt-5 sixth">
+          <div class="col-sm-6 text-center p-4">
             <h2>پشتیبانی در مانیتو</h2>
             <p>پاسخگویی در روزهای کاری از 9 صبح تا 9 شب</p>
           </div>
-          <div class="col-sm-6 d-flex align-items-center justify-content-center">
+          <div class="col-sm-6 d-flex align-items-center justify-content-center p-4">
             <img src="../assets/Group 5520.png" >
           </div>
         </div>
 
 
-        <div class="row m4-2 mt-2 mr-5 ml-5">
-            <div class="col-sm-3 text-right">
-              <img src="../assets/Group 152.svg" alt="header small mark" class="m-3 text-center">
-              <h5 class="m-1">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
-              <p class="m-1"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
-              <h3>
+        <div class="row mt-5 mr-5 ml-5">
+            <div class="col-sm-4 text-right">
+              <img src="../assets/Group 152.svg" alt="header small mark" class="m-1 text-center">
+              <h5 class="m-2">سوپر اپلیکیشن حوزه درمان و سلامت</h5>
+              <p class="m-2"><small>تمام حقوق مادی و معنوی این وبسایت متعلق به درمانیتو است.</small></p>
+              <h3 class="d-flex justify-content-around ml-5 mr-5">
                 <i href="#" class="fa fa-linkedin"></i>
                 <i href="#" class="fa fa-twitter"></i>
                 <i href="#" class="fa fa-instagram"></i>
               </h3>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right">
-              <h5 class="mt-3">خدمات درمانیتو</h5>
+            <div class="col-sm-2 d-none d-sm-block text-right">
+              <h5 class="mt-1">خدمات درمانیتو</h5>
               <h6 class="custom-footer-links"><small><a href="#">داروخانه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">فروشگاه آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">ویزیت آنلاین</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">پرونده پزشکی</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right">
-              <h5 class="mt-3">صفحات درمانیتو</h5>
-              <h6 class="custom-footer-links"><small><a href="#"  >تماس باما</a></small></h6>
+            <div class="col-sm-2 d-none d-sm-block text-right">
+              <h5 class="mt-1">صفحات درمانیتو</h5>
+              <h6 class="custom-footer-links"><small><a href="#">تماس باما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
               <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
             </div>
-            <div class="col-sm-3 d-none d-sm-block text-right" >
-                <h5 class="mt-3">دانلود درمانیتو</h5>
-                <a href="#" ><img class="footer__storeimages m-1" src="../assets/bazzar black icon.png"></a>
-			          <a href="#" ><img class="footer__storeimages m-1" src="../assets/sibapp black icon.png"></a>
+            <div class="col-sm-4 d-none d-sm-block text-right">
+                <h5 class="mt-1">دانلود درمانیتو</h5>
+                <a href="#"><img class="footer__storeimages m-1" src="../assets/bazzar black icon.png"></a>
+			          <a href="#"><img class="footer__storeimages m-1" src="../assets/sibapp black icon.png"></a>
             </div>
         </div>
     </div>
