contact page V1, Project2 V1 complete

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -43,13 +43,13 @@
                           <a class="nav-link custom-nav-small" href="#">عضویت در داروخانه ها</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link custom-nav-small" href="#">درباره ما</a>
+                          <a class="nav-link custom-nav-small" href="../pages/about.html">درباره ما</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link custom-nav-small" href="#">تماس باما</a>
+                          <a class="nav-link custom-nav-small" href="../pages/contact.html">تماس باما</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link custom-nav-small" href="#">سوالات متداول</a>
+                          <a class="nav-link custom-nav-small" href="../pages/faq.html">سوالات متداول</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link custom-nav-small" href="#">قوانین و شرایط</a>
@@ -228,9 +228,9 @@
           </div>
           <div class="col-sm-2 d-none d-sm-block text-right">
             <h5 class="mt-1">صفحات درمانیتو</h5>
-            <h6 class="custom-footer-links"><small><a href="#">تماس باما</a></small></h6>
-            <h6 class="custom-footer-links"><small><a href="#">درباره ما</a></small></h6>
-            <h6 class="custom-footer-links"><small><a href="#">سوالات متداول</a></small></h6>
+            <h6 class="custom-footer-links"><small><a href="../pages/contact.html">تماس باما</a></small></h6>
+            <h6 class="custom-footer-links"><small><a href="../pages/about.html">درباره ما</a></small></h6>
+            <h6 class="custom-footer-links"><small><a href="../pages/faq.html">سوالات متداول</a></small></h6>
             <h6 class="custom-footer-links"><small><a href="#">قوانین و شرایط</a></small></h6>
           </div>
           <div class="col-sm-4 d-none d-sm-block text-right">
